src/objects/S3File__c.object
<CustomObject>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>Content Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownloadLink__c</fullName>
        <formula>HYPERLINK(&quot;http://www.meginfo.com/f/&quot; + SUBSTITUTE( Name , &quot;F&quot;, &quot;&quot;), &quot;http://www.meginfo.com/f/&quot; + SUBSTITUTE( Name , &quot;F&quot;, &quot;&quot;), &quot;_blank&quot;)</formula>
        <inlineHelpText>Generates download link, valid for 2 hours</inlineHelpText>
        <label>Download Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>File Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfDownloads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Downloads</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalDate__c</fullName>
        <inlineHelpText>The CreatedDate of the archived file</inlineHelpText>
        <label>Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3Bucket__c</fullName>
        <label>S3 Bucket</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3Key__c</fullName>
        <label>S3 Key</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SizeInBytes__c</fullName>
        <label>Size In Bytes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <formula>IF( SizeInBytes__c &gt; 1024 * 1024 * 1024, 
    TEXT(ROUND(SizeInBytes__c / 1024 / 1024 / 1024, 2)) + &apos;GB&apos;,
    IF(SizeInBytes__c &gt; 1024 * 1024,
       TEXT(ROUND(SizeInBytes__c / 1024 / 1024, 2)) + &apos;MB&apos;,
       IF(SizeInBytes__c &gt; 1024,
          TEXT(ROUND(SizeInBytes__c / 1024, 2)) + &apos;KB&apos;,
          TEXT(SizeInBytes__c) + &apos;B&apos;)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size</label>
        <type>Text</type>
    </fields>
    <label>S3 File</label>
    <listViews>
        <fullName>All_Files</fullName>
        <columns>NAME</columns>
        <columns>FileName__c</columns>
        <columns>Size__c</columns>
        <columns>ParentId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Files</label>
    </listViews>
    <nameField>
        <displayFormat>F{000000}</displayFormat>
        <label>File Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3 Files</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>